# mindat-api-scrapper

./: WARP.md  api_client.py  api_key.txt  config.py  config.yaml  endpoints.py  errors.py  geomaterials.json  http.py  main.py  pyproject.toml
cli/: __init__.py  main.py  prompts.py
kepler/kepler-map/: WARP.md  package-lock.json  package.json
mbtiles/: WARP.md  app.js  geo-scripts.js  geo-style.css  geodatafromesri.html  index.html  style.css
mindat/: __init__.py
mindat/repositories/: __init__.py  localities_repo.py
mindat/services/: __init__.py  download_service.py
mindat/utils/: __init__.py  io.py  logging.py
mindat_data/: Iran_Mine_enriched.json  Iran_Mine_enriched_clean.json  iran_mines.geojson
mindat_data/geojson/: all_mines.geojson  layers.json
mindat_data/geojson/layers/: azurite_mines.geojson  barite_mines.geojson  calcite_mines.geojson  chalcocite_mines.geojson  chalcopyrite_mines.geojson  chrysocolla_mines.geojson  copper_mines.geojson  covellite_mines.geojson  cubanite_mines.geojson  epidote_mines.geojson  fluorite_mines.geojson  galena_variety_mines.geojson  gersdorffite_mines.geojson  goethite_mines.geojson  gold_mines.geojson  halite_mines.geojson  hematite_mines.geojson  hematite_variety_mines.geojson  iron_mines.geojson  iron_oxide_mines.geojson  lautite_mines.geojson  lead_mines.geojson  limonite_mines.geojson  magnetite_mines.geojson  malachite_mines.geojson  (+329 more)
scripts/: clean_mindat_json.py  export_geomaterials.py  geomaterials_data.json  iran_mines.geojson  last_page_url.txt  merging_geomaterils_iran_mines.py  to_leaflet_geojson.py
